--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
 /*********************** General Site Wide Selectors ***********************/
+body {
+  background-image: repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 30px, rgba(20, 0, 51, 0.5) 30px, rgba(20, 0, 51, 0.5) 33px), repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 30px, rgba(20, 0, 51, 0.5) 30px, rgba(20, 0, 51, 0.5) 33px);
+  font-size: 16px;
+  margin: 0;
+  padding: 0; }
+
 a:link, a:visited {
   color: black;
   text-decoration: none;
@@ -10,6 +16,16 @@ a:link, a:visited {
 
 a:hover, a:active {
   color: #6402ff; }
+
+.wrap {
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 1em auto;
+  max-width: 700px;
+  padding: 1em; }
+  .wrap:after {
+    content: "";
+    display: table;
+    clear: both; }
 
 /*********************** Page Specific Selectors ***************************/
 .logo {
