--- a/css/main.scss
+++ b/css/main.scss
@@ -1,11 +1,74 @@
 // Variables ***************************************************************
+$fullBreak:850px;
+$fullWidth:730px;
+$middleWidth:550px;
+$mobileBreak:600px;
+$mobileWidth:316px;
+
+
 $black:#000000;
 $purple:#6402ff;
-// Mixin's *****************************************************************
+$bgWhite:hsla(0, 100, 100, 0.8);
 
+// Gradient Colors
+$lightPurple:hsla(264, 100, 90, 0.5);
+$white:hsla(0, 100, 100, 0.5);
+$darkPurple:hsla(264, 100, 10, 0.5);
+
+// Mixin's *****************************************************************
+@mixin break($point) {
+	@if $point == full {
+		@media only screen and (max-width: $fullBreak) { @content; }
+	}
+	@else if $point == mobile {
+		@media only screen and (max-width: $mobileBreak) { @content; }
+	}
+}
+@mixin group() {
+	&:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+}
+
+
+
+// @mixin bgGradient() {
+// 	background-image:
+// 		repeating-linear-gradient(45deg,
+// 			@content
+// 		),
+// 		repeating-linear-gradient(135deg,
+// 			@content
+// 	);
+// }
 // Extendables *************************************************************
 
 /*********************** General Site Wide Selectors ***********************/
+body {
+	// @include linear-gradient(red, green); // need bourbon for this one...
+	background-image:
+		repeating-linear-gradient(45deg,
+			$lightPurple,
+			$lightPurple 10px,
+			$white 10px,
+			$white 30px,
+			$darkPurple 30px,
+			$darkPurple 33px
+		),
+		repeating-linear-gradient(135deg,
+			$lightPurple,
+			$lightPurple 10px,
+			$white 10px,
+			$white 30px,
+			$darkPurple 30px,
+			$darkPurple 33px
+	);
+	font-size:16px;
+	margin:0;
+	padding:0;
+}
 a:link, a:visited {
 	color:$black;
 	text-decoration:none;
@@ -17,6 +80,13 @@ a:link, a:visited {
 }
 a:hover, a:active {
 	color:$purple;
+}
+.wrap {
+	background-color:$bgWhite;
+	margin: 1em auto;
+	max-width:700px;
+	padding:1em;
+	@include group();
 }
 /*********************** Page Specific Selectors ***************************/
 .logo {
