--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /*********************** General Site Wide Selectors ***********************/
 body {
-  background-image: repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 30px, rgba(20, 0, 51, 0.5) 30px, rgba(20, 0, 51, 0.5) 33px), repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 30px, rgba(20, 0, 51, 0.5) 30px, rgba(20, 0, 51, 0.5) 33px);
+  background-color: white;
+  background-image: repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 13px, rgba(20, 0, 51, 0.5) 13px, rgba(20, 0, 51, 0.5) 18px, rgba(255, 255, 255, 0.5) 18px, rgba(255, 255, 255, 0.5) 38px, rgba(20, 0, 51, 0.5) 38px, rgba(20, 0, 51, 0.5) 48px, rgba(255, 255, 255, 0.5) 48px, rgba(255, 255, 255, 0.5) 100px), repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 13px, rgba(20, 0, 51, 0.5) 13px, rgba(20, 0, 51, 0.5) 18px, rgba(255, 255, 255, 0.5) 18px, rgba(255, 255, 255, 0.5) 38px, rgba(20, 0, 51, 0.5) 38px, rgba(20, 0, 51, 0.5) 48px, rgba(255, 255, 255, 0.5) 48px, rgba(255, 255, 255, 0.5) 100px);
   font-size: 16px;
   margin: 0;
   padding: 0; }
@@ -21,11 +22,23 @@ a:hover, a:active {
   background-color: rgba(255, 255, 255, 0.8);
   margin: 1em auto;
   max-width: 700px;
-  padding: 1em; }
+  padding: 1em;
+  position: relative; }
   .wrap:after {
     content: "";
     display: table;
     clear: both; }
+
+.wrap:before {
+  content: url(../images/logo_0.png);
+  left: -100px;
+  position: absolute;
+  top: -1em;
+  z-index: 0; }
+
+header, section, footer {
+  position: relative;
+  z-index: 500; }
 
 /*********************** Page Specific Selectors ***************************/
 .logo {
