adjusted home page content, and did some more gradient work, also put a little work into mobile layout

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,12 +6,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{% if page.title %} {{ page.title }} | {% endif %} Git Pages Rule!</title>
+        <title>Work With Fitz To {% if page.title %} {{ page.title }} {% endif %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body {% if page.bodyClass %} class="{{ page.bodyClass }}" {% endif %}>
