--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /*********************** General Site Wide Selectors ***********************/
 body {
   background-color: white;
-  background-image: repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 13px, rgba(20, 0, 51, 0.5) 13px, rgba(20, 0, 51, 0.5) 18px, rgba(255, 255, 255, 0.5) 18px, rgba(255, 255, 255, 0.5) 38px, rgba(20, 0, 51, 0.5) 38px, rgba(20, 0, 51, 0.5) 48px, rgba(255, 255, 255, 0.5) 48px, rgba(255, 255, 255, 0.5) 100px), repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 13px, rgba(20, 0, 51, 0.5) 13px, rgba(20, 0, 51, 0.5) 18px, rgba(255, 255, 255, 0.5) 18px, rgba(255, 255, 255, 0.5) 38px, rgba(20, 0, 51, 0.5) 38px, rgba(20, 0, 51, 0.5) 48px, rgba(255, 255, 255, 0.5) 48px, rgba(255, 255, 255, 0.5) 100px);
+  background-image: repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.5) 15px, rgba(20, 0, 51, 0.5) 25px, rgba(224, 204, 255, 0.5) 25px, rgba(224, 204, 255, 0.5) 30px, rgba(20, 0, 51, 0.5) 30px, rgba(20, 0, 51, 0.5) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px), repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.5) 15px, rgba(20, 0, 51, 0.5) 25px, rgba(224, 204, 255, 0.5) 25px, rgba(224, 204, 255, 0.5) 30px, rgba(20, 0, 51, 0.5) 30px, rgba(20, 0, 51, 0.5) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px);
   font-size: 16px;
   margin: 0;
   padding: 0; }
@@ -21,30 +21,54 @@ a:hover, a:active {
 .wrap {
   background-color: rgba(255, 255, 255, 0.8);
   margin: 1em auto;
-  max-width: 700px;
+  max-width: 730px;
+  min-height: 500px;
   padding: 1em;
   position: relative; }
   .wrap:after {
     content: "";
     display: table;
     clear: both; }
-
-.wrap:before {
-  content: url(../images/logo_0.png);
-  left: -100px;
-  position: absolute;
-  top: -1em;
-  z-index: 0; }
+  @media only screen and (max-width: 850px) {
+    .wrap {
+      max-width: 550px; } }
+  @media only screen and (max-width: 600px) {
+    .wrap {
+      max-width: 316px; } }
 
 header, section, footer {
   position: relative;
   z-index: 500; }
 
-/*********************** Page Specific Selectors ***************************/
-.logo {
-  float: left;
-  height: auto;
-  max-width: 100%; }
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400; }
 
-p {
-  float: left; }
+/*********************** Page Specific Selectors ***************************/
+body.home .desc {
+  float: right; }
+  @media only screen and (max-width: 600px) {
+    body.home .desc {
+      float: none;
+      text-align: center; } }
+  @media only screen and (max-width: 600px) {
+    body.home .desc h1 {
+      font-size: 4.5em;
+      margin: 0; } }
+  @media only screen and (max-width: 600px) {
+    body.home .desc h2 {
+      font-size: 1.9em;
+      margin: 0; } }
+  @media only screen and (max-width: 600px) {
+    body.home .desc h3 {
+      font-size: 3em;
+      margin: 0; } }
+
+.logo {
+  left: -2em;
+  position: absolute;
+  top: -2em; }
+  @media only screen and (max-width: 600px) {
+    .logo {
+      left: -6em;
+      opacity: 0.4;
+      top: -2em; } }
