--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /*********************** General Site Wide Selectors ***********************/
 body {
   background-color: white;
-  background-image: repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.5) 15px, rgba(20, 0, 51, 0.5) 25px, rgba(224, 204, 255, 0.5) 25px, rgba(224, 204, 255, 0.5) 30px, rgba(20, 0, 51, 0.5) 30px, rgba(20, 0, 51, 0.5) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px), repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.5) 15px, rgba(20, 0, 51, 0.5) 25px, rgba(224, 204, 255, 0.5) 25px, rgba(224, 204, 255, 0.5) 30px, rgba(20, 0, 51, 0.5) 30px, rgba(20, 0, 51, 0.5) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px);
+  background-image: repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.1) 15px, rgba(20, 0, 51, 0.1) 25px, rgba(224, 204, 255, 0.5) 25px, rgba(224, 204, 255, 0.5) 30px, rgba(20, 0, 51, 0.1) 30px, rgba(20, 0, 51, 0.1) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px), repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.1) 15px, rgba(20, 0, 51, 0.1) 25px, rgba(255, 255, 255, 0.5) 25px, rgba(255, 255, 255, 0.5) 30px, rgba(20, 0, 51, 0.1) 30px, rgba(20, 0, 51, 0.1) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px);
   font-size: 16px;
   margin: 0;
   padding: 0; }
@@ -19,11 +19,9 @@ a:hover, a:active {
   color: #6402ff; }
 
 .wrap {
-  background-color: rgba(255, 255, 255, 0.8);
   margin: 1em auto;
   max-width: 730px;
   min-height: 500px;
-  padding: 1em;
   position: relative; }
   .wrap:after {
     content: "";
@@ -37,8 +35,15 @@ a:hover, a:active {
       max-width: 316px; } }
 
 header, section, footer {
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 2em 0;
+  padding: 1em;
   position: relative;
   z-index: 500; }
+  header:after, section:after, footer:after {
+    content: "";
+    display: table;
+    clear: both; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400; }
