--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $bgWhite:hsla(0, 100, 100, 0.8);
 // Gradient Colors
 $lightPurple:hsla(264, 100, 90, 0.5);
 $white:hsla(0, 100, 100, 0.5);
-$darkPurple:hsla(264, 100, 10, 0.5);
+$darkPurple:hsla(264, 100, 10, 0.1);
 
 // Mixin's *****************************************************************
 @mixin break($point) {
@@ -49,6 +49,19 @@ $darkPurple:hsla(264, 100, 10, 0.5);
 body {
 	// @include linear-gradient(red, green); // need bourbon for this one...
 	background-color:white;
+	// single light purple stripe on white
+	// background-image:
+	// 	repeating-linear-gradient(45deg,
+	// 		$lightPurple,
+	// 		$lightPurple 5px,
+	// 		$white 5px,
+	// 		$white 100px),
+	// 	repeating-linear-gradient(135deg,
+	// 		$lightPurple,
+	// 		$lightPurple 5px,
+	// 		$white 5px,
+	// 		$white 100px)
+	// ;
 	background-image:
 		repeating-linear-gradient(45deg,
 			$lightPurple,
@@ -70,8 +83,8 @@ body {
 			$white 15px,
 			$darkPurple 15px,
 			$darkPurple 25px,
-			$lightPurple 25px,
-			$lightPurple 30px,
+			$white 25px,
+			$white 30px,
 			$darkPurple 30px,
 			$darkPurple 45px,
 			$white 45px,
@@ -94,11 +107,9 @@ a:hover, a:active {
 	color:$purple;
 }
 .wrap {
-	background-color:$bgWhite;
 	margin: 1em auto;
 	max-width:$fullWidth;
 	min-height:500px;
-	padding:1em;
 	position:relative;
 	@include group();
 	@include break(full) {
@@ -109,8 +120,12 @@ a:hover, a:active {
 	}
 }
 header, section, footer {
+	background-color:$bgWhite;
+	margin:2em 0;
+	padding:1em;
 	position:relative;
 	z-index:500;
+	@include group();
 }
 h1, h2, h3, h4, h5, h6 {
 	font-weight:400;
