--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,23 +9,34 @@
         <title>Work With Fitz To {% if page.title %} {{ page.title }} {% else %} {{ ... }} {% endif %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body {% if page.bodyClass %} class="{{ page.bodyClass }}" {% endif %}>
         <div class="wrap">
             <header>
-                {{ content }}
+                <img src="images/logo_0.png" width="456" height="561" alt="Fitz" class="logo" />
+                <div class="homeDesc">
+                    {{ content }}
+                    {% comment %} {% include nav.html %} {% endcomment %}
+                </div>
             </header>
             <section>
+                <h2 class="title">Portfolio</h2>
                 {% for project in site.categories.projects %}
-                <article>
-                    <img src="{{ project.img }}"/> <!-- TODO add dimentions -->
-                    <h2>{{ project.title }}</h2>
-                    {{ project.content }}
-                    <a href="{{ project.link }}" target="_blank">{{ project.link }}</a>
+                <article class="project">
+                    <a href="{{ project.link }}" target="_blank">
+                        <img src="{{ project.img }}" width="550" height="335"/>
+                    </a>
+                    <div class="projHead">
+                        <h3>{{ project.title }}</h3>
+                        <a href="{{ project.link }}" target="_blank">{{ project.link }}</a>
+                    </div>
+                    <div class="projCont">
+                        {{ project.content }}
+                    </div>
                 </article>
                 {% endfor %}
             </section>
