--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,14 +41,13 @@
                 {% endfor %}
             </section>
             <footer>
-                <span>twitter</span>
-                <span>linkedin</span>
-                <span>email</span>
+                {% include footer.html %}
             </footer>
         </div>
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <!--[if lte IE 7]><script src="js/lte-ie7.js"></script><![endif]-->
     </body>
 </html>
