--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ a:hover, a:active {
     clear: both; }
   @media only screen and (max-width: 850px) {
     .wrap {
-      max-width: 550px; } }
+      width: 95%; } }
   @media only screen and (max-width: 600px) {
     .wrap {
       max-width: 316px; } }
@@ -78,7 +78,7 @@ header, section, footer {
 
 a.button:link, a.button:visited {
   background-image: linear-gradient(155deg, rgba(255, 255, 255, 0.8), #20005c);
-  border-radius: 1.5em;
+  border-radius: 2em;
   color: #20005c;
   padding: 1em;
   text-shadow: 1px 1px rgba(255, 255, 255, 0.5); }
@@ -88,6 +88,20 @@ a.button:hover, a.button:active {
   color: white;
   text-shadow: 2px 2px #20005c; }
 
+footer {
+  text-align: center; }
+  footer p {
+    margin-top: 0; }
+  footer .icon {
+    font-size: 3em; }
+    footer .icon:nth-child(3) {
+      padding: 0 1em; }
+  footer a.icon:link, footer a.icon:visited {
+    color: #20005c; }
+  footer a.icon:hover, footer a.icon:active {
+    background-color: transparent;
+    color: #6402ff; }
+
 /*********************** Page Specific Selectors ***************************/
 .homeDesc {
   float: right;
@@ -95,34 +109,32 @@ a.button:hover, a.button:active {
   @media only screen and (max-width: 600px) {
     .homeDesc {
       float: none;
-      text-align: center; } }
+      text-align: center;
+      width: 100%; } }
   .homeDesc h1 {
     margin: 0.2em 0 0;
     text-align: center; }
-    @media only screen and (max-width: 600px) {
-      .homeDesc h1 {
-        font-size: 4.5em;
-        margin: 0; } }
   .homeDesc h2 {
     font-size: 1.4em; }
-    @media only screen and (max-width: 600px) {
-      .homeDesc h2 {
-        font-size: 1.9em;
-        margin: 0; } }
   @media only screen and (max-width: 600px) {
-    .homeDesc h3 {
-      font-size: 3em;
-      margin: 0; } }
+    .homeDesc p {
+      text-align: left; } }
 
 .logo {
+  height: auto;
   left: -2em;
   position: absolute;
-  top: -2em; }
+  top: -2em;
+  width: 60%; }
   @media only screen and (max-width: 600px) {
     .logo {
-      left: -6em;
-      opacity: 0.4;
-      top: -2em; } }
+      opacity: 0.1;
+      width: 115%; } }
+
+h2.title {
+  margin-bottom: 1.1em;
+  text-align: center;
+  width: 40%; }
 
 article.project:after {
   content: "";
@@ -130,14 +142,11 @@ article.project:after {
   clear: both; }
 article.project img {
   display: block;
-  width: 100%;
-  height: auto; }
+  height: auto;
+  width: 100%; }
 
 article.project {
-  margin-top: 4em; }
-
-article.project:first-child {
-  margin-top: 0; }
+  margin-bottom: 4em; }
 
 .projHead {
   display: inline;
@@ -148,8 +157,59 @@ article.project:first-child {
     margin-top: 1em; }
   .projHead a:link, .projHead a:visited {
     text-decoration: underline; }
+  @media only screen and (max-width: 600px) {
+    .projHead {
+      width: 100%; } }
 
 .projCont {
   display: inline;
   float: left;
+  margin-top: 1.3em;
   width: 60%; }
+  @media only screen and (max-width: 600px) {
+    .projCont {
+      width: 100%; } }
+
+@font-face {
+  font-family: 'workwithfitzto-icons';
+  src: url("../icons/workwithfitzto-icons.eot");
+  src: url("../icons/workwithfitzto-icons.eot?#iefix") format("embedded-opentype"), url("../icons/workwithfitzto-icons.woff") format("woff"), url("../icons/workwithfitzto-icons.ttf") format("truetype"), url("../icons/workwithfitzto-icons.svg#workwithfitzto-icons") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+.icon-list, .icon-github, .icon-twitter, .icon-facebook, .icon-mail, .icon-feed, .icon-dribbble, .icon-linkedin, .icon-share2 {
+  font-family: 'workwithfitzto-icons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased; }
+
+.icon-list:before {
+  content: "\e004"; }
+
+.icon-github:before {
+  content: "\e001"; }
+
+.icon-twitter:before {
+  content: "\e000"; }
+
+.icon-facebook:before {
+  content: "\e002"; }
+
+.icon-mail:before {
+  content: "\e008"; }
+
+.icon-feed:before {
+  content: "\e007"; }
+
+.icon-dribbble:before {
+  content: "\e009"; }
+
+.icon-linkedin:before {
+  content: "\e005"; }
+
+.icon-share2:before {
+  content: "\f147"; }
