more styling work and a little cleaning up

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
+<p>I would love to hear about your project and get to work. Shoot me an email at <a href="mailto:fitz@fitz.to">fitz@fitz.to</a>.</p>
 <p>Let's connect...</p>
-<a href="#" class="icon icon-mail" target="_blank"></a>
-<a href="#" class="icon icon-linkedin" target="_blank"></a>
-<a href="#" class="icon icon-twitter" target="_blank"></a>
+<a href="mailto:hire@fitz.to" class="icon icon-mail" target="_blank"></a>
+<a href="http://www.linkedin.com/in/fitzhughryland/" class="icon icon-linkedin" target="_blank"></a>
+<a href="http://twitter.com/fitzhuge/" class="icon icon-twitter" target="_blank"></a>
