--- a/css/main.scss
+++ b/css/main.scss
@@ -48,21 +48,35 @@ $gDarkPurple:hsla(264, 100, 10, 0.1);
 
 /*********************** General Site Wide Selectors ***********************/
 body {
-	// @include linear-gradient(red, green); // need bourbon for this one...
 	background-color:white;
-	// single light purple stripe on white
-	// background-image:
-	// 	repeating-linear-gradient(45deg,
-	// 		$gLightPurple,
-	// 		$gLightPurple 5px,
-	// 		$white 5px,
-	// 		$white 100px),
-	// 	repeating-linear-gradient(135deg,
-	// 		$gLightPurple,
-	// 		$gLightPurple 5px,
-	// 		$white 5px,
-	// 		$white 100px)
-	// ;
+	background-image:
+		-webkit-repeating-linear-gradient(45deg,
+			$gLightPurple,
+			$gLightPurple 10px,
+			$white 10px,
+			$white 15px,
+			$gDarkPurple 15px,
+			$gDarkPurple 25px,
+			$gLightPurple 25px,
+			$gLightPurple 30px,
+			$gDarkPurple 30px,
+			$gDarkPurple 45px,
+			$white 45px,
+			$white 100px),
+		-webkit-repeating-linear-gradient(135deg,
+			$gLightPurple,
+			$gLightPurple 10px,
+			$white 10px,
+			$white 15px,
+			$gDarkPurple 15px,
+			$gDarkPurple 25px,
+			$white 25px,
+			$white 30px,
+			$gDarkPurple 30px,
+			$gDarkPurple 45px,
+			$white 45px,
+			$white 100px)
+	;
 	background-image:
 		repeating-linear-gradient(45deg,
 			$gLightPurple,
@@ -121,7 +135,6 @@ h6 {
 }
 a:link, a:visited {
 	color:$purple;
-	text-decoration:none;
 	-webkit-transition: all 0.2s ease;
 	-moz-transition: all 0.2s ease;
 	-o-transition: all 0.2s ease;
@@ -150,7 +163,7 @@ header, section, footer {
 	margin:2em 0;
 	padding:1em;
 	position:relative;
-	z-index:500;
+	z-index:0;
 	@include group();
 }
 .buttonWrap {
@@ -160,22 +173,34 @@ header, section, footer {
 	text-align:center;
 }
 a.button:link, a.button:visited {
-	background-image: linear-gradient(155deg,
+	background-image: -webkit-linear-gradient(155deg,
+		$bgWhite,
+		$black
+		);
+	background-image: -webkit-linear-gradient(155deg,
 		$bgWhite,
 		$black
 		);
 	border-radius:2em;
 	color:$black;
 	padding: 1em;
-	text-shadow:1px 1px $white;
+	text-decoration:none;
+	text-shadow:-1px -1px $white, 1px 1px $white, 0px 1px $white, 0px -1px $white;
 }
 a.button:hover, a.button:active {
 	background-image: linear-gradient(155deg,
 		$black,
 		$purple
 		);
+	background-image: linear-gradient(155deg,
+		$black,
+		$purple
+		);
 	color:white;
 	text-shadow:2px 2px $black;
+}
+a.icon {
+	text-decoration:none;
 }
 footer {
 	text-align:center;
@@ -184,7 +209,7 @@ footer {
 	}
 	.icon {
 		font-size: 3em;
-		&:nth-child(3) {
+		&:nth-child(4) {
 			padding:0 1em;
 		}
 	}
@@ -200,7 +225,9 @@ footer {
 
 .homeDesc {
 	float:right;
+	position:relative;
 	width: 40%;
+	z-index:1000;
 	@include break(mobile) {
 		float:none;
 		text-align: center;
@@ -234,6 +261,7 @@ footer {
 	position:absolute;
 	top:-2em;
 	width:60%;
+	z-index:700;
 	@include break(mobile) {
 		opacity: 0.1;
 		width:115%;
@@ -262,9 +290,6 @@ article.project {
 	width:40%;
 	h3 {
 		margin-top: 1em;
-	}
-	a:link, a:visited {
-		text-decoration: underline;
 	}
 	@include break(mobile) {
 		width:100%;
