--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,8 @@ footer {
     text-align: center; }
   .homeDesc h2 {
     font-size: 1.4em; }
+  .homeDesc h3 {
+    font-size: 1.3em; }
   @media only screen and (max-width: 600px) {
     .homeDesc p {
       text-align: left; } }
