--- a/css/main.css
+++ b/css/main.css
@@ -77,19 +77,26 @@ header, section, footer {
   text-align: center; }
 
 a.button:link, a.button:visited {
-  background-image: -webkit-linear-gradient(155deg, rgba(255, 255, 255, 0.8), #20005c);
-  background-image: -webkit-linear-gradient(155deg, rgba(255, 255, 255, 0.8), #20005c);
+  background-image: -webkit-linear-gradient(155deg, #dac1ff, #a07cd5);
+  background-image: linear-gradient(155deg, #dac1ff, #a07cd5);
+  border-top: 1px solid #9f78d9;
+  border-right: 2px solid #7b4ac2;
+  border-bottom: 2px solid #7b4ac2;
+  border-left: 1px solid #9f78d9;
   border-radius: 2em;
   color: #20005c;
   padding: 1em;
   text-decoration: none;
-  text-shadow: -1px -1px rgba(255, 255, 255, 0.5), 1px 1px rgba(255, 255, 255, 0.5), 0px 1px rgba(255, 255, 255, 0.5), 0px -1px rgba(255, 255, 255, 0.5); }
+  text-shadow: -1px -1px 0px #f4ebff, 1px 1px 0px #f4ebff, 0px 1px 0px #f4ebff, 0px -1px 0px #f4ebff; }
 
 a.button:hover, a.button:active {
-  background-image: linear-gradient(155deg, #20005c, #6402ff);
-  background-image: linear-gradient(155deg, #20005c, #6402ff);
-  color: white;
-  text-shadow: 2px 2px #20005c; }
+  background-image: -webkit-linear-gradient(155deg, #a07cd5, #dac1ff);
+  background-image: linear-gradient(155deg, #a07cd5, #dac1ff);
+  border-top: 1px solid #7b4ac2;
+  border-right: 2px solid #9f78d9;
+  border-bottom: 2px solid #9f78d9;
+  border-left: 1px solid #7b4ac2;
+  text-shadow: -1px -1px 4px #f4ebff, 1px 1px 4px #f4ebff, 0px 1px 4px #f4ebff, 0px -1px 4px #f4ebff; }
 
 a.icon {
   text-decoration: none; }
