--- a/css/main.scss
+++ b/css/main.scss
@@ -4,18 +4,21 @@ $fullWidth:730px;
 $mobileBreak:600px;
 $middleWidth:550px;
 $mobileWidth:316px;
-
-
+// Colors
 $black:#20005c;
 $purple:#6402ff;
 $yellow:#f1de00;
 $bgWhite:hsla(0, 100, 100, 0.8);
-
 // Gradient Colors
 $gLightPurple:hsla(264, 100, 90, 0.5);
 $white:hsla(0, 100, 100, 0.5);
 $gDarkPurple:hsla(264, 100, 10, 0.1);
-
+// Button Colors
+$buttonL:#dac1ff;
+$buttonD:#a07cd5;
+$buttonBorderL:#9f78d9;
+$buttonBorderD:#7b4ac2;
+$buttonTextShadow:#f4ebff;
 // Mixin's *****************************************************************
 @mixin break($point) {
 	@if $point == full {
@@ -32,18 +35,6 @@ $gDarkPurple:hsla(264, 100, 10, 0.1);
 		clear: both;
 	}
 }
-
-
-
-// @mixin bgGradient() {
-// 	background-image:
-// 		repeating-linear-gradient(45deg,
-// 			@content
-// 		),
-// 		repeating-linear-gradient(135deg,
-// 			@content
-// 	);
-// }
 // Extendables *************************************************************
 
 /*********************** General Site Wide Selectors ***********************/
@@ -173,31 +164,26 @@ header, section, footer {
 	text-align:center;
 }
 a.button:link, a.button:visited {
-	background-image: -webkit-linear-gradient(155deg,
-		$bgWhite,
-		$black
-		);
-	background-image: -webkit-linear-gradient(155deg,
-		$bgWhite,
-		$black
-		);
+	background-image: -webkit-linear-gradient(155deg, $buttonL, $buttonD);
+	background-image: linear-gradient(155deg, $buttonL, $buttonD);
+	border-top:1px solid $buttonBorderL;
+	border-right:2px solid $buttonBorderD;
+	border-bottom:2px solid $buttonBorderD;
+	border-left:1px solid $buttonBorderL;
 	border-radius:2em;
 	color:$black;
 	padding: 1em;
 	text-decoration:none;
-	text-shadow:-1px -1px $white, 1px 1px $white, 0px 1px $white, 0px -1px $white;
+	text-shadow:-1px -1px 0px $buttonTextShadow, 1px 1px 0px $buttonTextShadow, 0px 1px 0px $buttonTextShadow, 0px -1px 0px $buttonTextShadow;
 }
 a.button:hover, a.button:active {
-	background-image: linear-gradient(155deg,
-		$black,
-		$purple
-		);
-	background-image: linear-gradient(155deg,
-		$black,
-		$purple
-		);
-	color:white;
-	text-shadow:2px 2px $black;
+	background-image: -webkit-linear-gradient(155deg, $buttonD, $buttonL);
+	background-image: linear-gradient(155deg, $buttonD, $buttonL);
+	border-top:1px solid $buttonBorderD;
+	border-right:2px solid $buttonBorderL;
+	border-bottom:2px solid $buttonBorderL;
+	border-left:1px solid $buttonBorderD;
+	text-shadow:-1px -1px 4px $buttonTextShadow, 1px 1px 4px $buttonTextShadow, 0px 1px 4px $buttonTextShadow, 0px -1px 4px $buttonTextShadow;
 }
 a.icon {
 	text-decoration:none;
@@ -222,7 +208,6 @@ footer {
 	}
 }
 /*********************** Page Specific Selectors ***************************/
-
 .homeDesc {
 	float:right;
 	position:relative;
@@ -257,7 +242,6 @@ footer {
 		}
 	}
 }
-
 .logo {
 	height:auto;
 	left:-2em;
