--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,5 @@
+// Imports ***************************************************************
+@import "../bourbon/_bourbon.scss";
 // Variables ***************************************************************
 $fullBreak:850px;
 $fullWidth:730px;
