--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ header, section, footer {
 
 a.button:link, a.button:visited {
   background-image: -webkit-linear-gradient(155deg, #dac1ff, #a07cd5);
-  background-image: linear-gradient(155deg, #dac1ff, #a07cd5);
+  background-image: linear, 155deg, #dac1ff, #a07cd5;
   border-top: 1px solid #9f78d9;
   border-right: 2px solid #7b4ac2;
   border-bottom: 2px solid #7b4ac2;
@@ -91,7 +91,7 @@ a.button:link, a.button:visited {
 
 a.button:hover, a.button:active {
   background-image: -webkit-linear-gradient(155deg, #a07cd5, #dac1ff);
-  background-image: linear-gradient(155deg, #a07cd5, #dac1ff);
+  background-image: linear, 155deg, #a07cd5, #dac1ff;
   border-top: 1px solid #7b4ac2;
   border-right: 2px solid #9f78d9;
   border-bottom: 2px solid #9f78d9;
