--- a/css/main.scss
+++ b/css/main.scss
@@ -166,26 +166,26 @@ header, section, footer {
 	text-align:center;
 }
 a.button:link, a.button:visited {
-	background-image: -webkit-linear-gradient(335deg, $buttonL, $buttonD);
-	background-image: linear-gradient(335deg, $buttonL, $buttonD);
+	background-image: -webkit-linear-gradient(-80deg, $buttonL, $buttonD);
+	background-image: linear-gradient(-80deg, $buttonL, $buttonD);
 	border-top:2px solid $buttonBorderL;
 	border-right:2px solid $buttonBorderD;
 	border-bottom:2px solid $buttonBorderD;
 	border-left:2px solid $buttonBorderL;
 	border-radius:2em;
-	color:$black;
+	color:#603e92;
 	padding: 1em;
 	text-decoration:none;
-	text-shadow:-1px -1px 0px $buttonTextShadow, 1px 1px 0px $buttonTextShadow, 0px 1px 0px $buttonTextShadow, 0px -1px 0px $buttonTextShadow;
+	text-shadow:-1px -1px 0px $buttonL, 1px 1px 0px $black;
 }
 a.button:hover, a.button:active {
-	background-image: -webkit-linear-gradient(335deg, $buttonD, $buttonL);
-	background-image: linear-gradient(335deg, $buttonD, $buttonL);
+	background-image: -webkit-linear-gradient(-80deg, $buttonD, $buttonL);
+	background-image: linear-gradient(-80deg, $buttonD, $buttonL);
 	border-top:2px solid $buttonBorderD;
 	border-right:2px solid $buttonBorderL;
 	border-bottom:2px solid $buttonBorderL;
 	border-left:2px solid $buttonBorderD;
-	text-shadow:-1px -1px 4px $buttonTextShadow, 1px 1px 4px $buttonTextShadow, 0px 1px 4px $buttonTextShadow, 0px -1px 4px $buttonTextShadow;
+	//text-shadow:-1px -1px 4px $buttonTextShadow, 1px 1px 4px $buttonTextShadow, 0px 1px 4px $buttonTextShadow, 0px -1px 4px $buttonTextShadow;
 }
 a.icon {
 	text-decoration:none;
@@ -198,15 +198,16 @@ footer {
 	.icon {
 		font-size: 3em;
 		&:nth-child(4) {
-			padding:0 1em;
+			margin:0 1em;
 		}
 	}
 	a.icon:link, a.icon:visited {
-		color:$black;
+		color:$buttonD;
 	}
 	a.icon:hover, a.icon:active {
 		background-color:transparent;
-		color:$purple;
+		color:$buttonBorderL;
+		//text-shadow: 0px 0px 6px $buttonBorderL;
 	}
 }
 /*********************** Page Specific Selectors ***************************/
