styled portfolio description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
             </header>
             <section>
                 <h2 class="title">Portfolio</h2>
-                <p>To give you a brief idea of what I have been up to recently here are three websites that I have completed so far in 2013. Each represents a passion of mine professional or otherwise and are built with the latest web standards on WordPress.</p>
+                <p class="portDesc">To give you a brief idea of what I have been up to recently here are three websites that I have completed so far in 2013. Each represents a passion of mine professional or otherwise and are built with the latest web standards on WordPress.</p>
                 {% for project in site.categories.projects %}
                 <article class="project">
                     <a href="{{ project.link }}" target="_blank">
