A few more content edits, and actually included the correct logo img.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <body {% if page.bodyClass %} class="{{ page.bodyClass }}" {% endif %}>
         <div class="wrap">
             <header>
-                <img src="images/logo_0.png" width="456" height="561" alt="Fitz" class="logo" />
+                <img src="images/logo_0_1.png" width="456" height="561" alt="Fitz" class="logo" />
                 <div class="homeDesc">
                     {{ content }}
                     {% comment %} {% include nav.html %} {% endcomment %}
