--- a/css/main.css
+++ b/css/main.css
@@ -86,8 +86,7 @@ a.button:link, a.button:visited {
   border-radius: 2em;
   color: #603e92;
   padding: 1em;
-  text-decoration: none;
-  text-shadow: -1px -1px 0px #dac1ff, 1px 1px 0px #20005c; }
+  text-decoration: none; }
 
 a.button:hover, a.button:active {
   background-image: -webkit-linear-gradient(-80deg, #7e59b5, #dac1ff);
@@ -95,7 +94,8 @@ a.button:hover, a.button:active {
   border-top: 2px solid #7b4ac2;
   border-right: 2px solid #9f78d9;
   border-bottom: 2px solid #9f78d9;
-  border-left: 2px solid #7b4ac2; }
+  border-left: 2px solid #7b4ac2;
+  color: #20005c; }
 
 a.icon {
   text-decoration: none; }
