--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,8 @@ footer {
   .homeDesc h2 {
     font-size: 1.4em; }
   .homeDesc h3 {
-    font-size: 1.3em; }
+    font-size: 1.3em;
+    text-align: center; }
   @media only screen and (max-width: 600px) {
     .homeDesc p {
       text-align: left; } }
