--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Work With Fitz To {% if page.title %} {{ page.title }} {% else %} {{ ... }} {% endif %}</title>
         <meta name="description" content="Businesses hire me to build functional and beautiful websites. Making user interfaces to help businesses succeed is my passion. I currently have availability for new projects, so let's talk and get to work.">
+        <meta name="keywords" content="Fitz Ryland, Fitzhugh Ryland, Fitz Hugh Ryland, Web designer, web design, portland, portland or, portland oregon, PDX, wordpress, freelance">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
