fixed firefox img clearing bug

--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,7 @@ article.project:after {
   display: table;
   clear: both; }
 article.project img {
+  clear: both;
   display: block;
   height: auto;
   width: 100%; }
