--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
         <meta name="description" content="Businesses hire me to build functional and beautiful websites. Making user interfaces to help businesses succeed is my passion. I currently have availability for new projects, so let's talk and get to work.">
         <meta name="keywords" content="Fitz Ryland, Fitzhugh Ryland, Fitz Hugh Ryland, Web designer, web design, portland, portland or, portland oregon, PDX, wordpress, freelance">
         <meta name="viewport" content="width=device-width">
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans' rel='stylesheet' type='text/css'>
