--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,5 +62,8 @@
           ga('create', 'UA-40908085-1', 'fitz.to');
           ga('send', 'pageview');
         </script>
+        <script src="//static.getclicky.com/js" type="text/javascript"></script>
+        <script type="text/javascript">try{ clicky.init(100618153); }catch(e){}</script>
+        <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100618153ns.gif" /></p></noscript>
     </body>
 </html>
