--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,4 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Work With Fitz To {% if page.title %} {{ page.title }} {% else %} {{ ... }} {% endif %}</title>
-        <meta name="description" content="Businesses hire me to build functional and beautiful websites. Making user interfaces to help businesses succeed is my passion. I currently have availability for new projects, so let's talk and get to work.">
-        <meta name="keywords" content="fitz ryland, fitzhugh ryland, fitz hugh ryland, web designer, web design, portland, portland or, portland oregon, pdx, wordpress, freelance">
-        <meta name="viewport" content="width=device-width">
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans' rel='stylesheet' type='text/css'>
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body {% if page.bodyClass %} class="{{ page.bodyClass }}" {% endif %}>
-        <div class="wrap">
-            <header>
-                <img src="images/logo_0_1.png" width="456" height="561" alt="Fitz" class="logo" />
-                <div class="homeDesc">
-                    {{ content }}
-                    {% comment %} {% include nav.html %} {% endcomment %}
-                </div>
-            </header>
+{% include header.html %}
             <section>
                 <h2 class="title">Portfolio</h2>
                 <p class="portDesc">To give you a brief idea of what I've been up to recently, here are three websites that I completed in 2013. Each represents a passion of mine -- professional or otherwise -- and are built using the latest web standards on WordPress.</p>
