started blog implimentation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,5 +24,6 @@
                 <div class="homeDesc">
                     {{ content }}
                     {% comment %} {% include nav.html %} {% endcomment %}
+                    {% include nav.html %}
                 </div>
             </header>
