--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
 <nav>
-	<a href="/">Portfolio</a>
-	<a href="/document">Blog</a>
+	<a href="#portfolio">Portfolio</a>
+	<a href="#documentation">Documentation</a>
 </nav>
